--- a/CharacterInfo.html
+++ b/CharacterInfo.html
@@ -94,7 +94,7 @@
 			<h2 id = "Moveset"> Moveset of characters (Max stats) </h2>
 				<ol>
 					<li><h3> Yourself, Pikachu </h3><div></div>
-						<img src = "ICSImages/yourself.png" width = "250" height = "400" alt = "Yourself." /><div></div>				
+						<img src = "yourself.png" width = "250" height = "400" alt = "Yourself." /><div></div>				
 						Moves:
 						<p> Thunder Shock (costs 1 move gauge) is an electric type Sp. Atk move that has 20 power with 100 accuracy and it hits a single target. Very small chance to leave the target paralyzed. </p>
 						<p> Thunderbolt (costs 2 move gauge) is an electric Sp. Atk move that has 56 power with 100 accuracy and it hits a single target. very small chance to leave the target paralyzed. </p>
