--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</ul>
 		</div>
 			<h1 id = "top"> What is Pokemon masters? </h1><div></div>
-				<img src = "ICSImages/pokemonmastersbanner.jpg" width = "1000" height = "500" alt = "Pokemon Masters banner" />
+				<img src = "pokemonmastersbanner.jpg" width = "1000" height = "500" alt = "Pokemon Masters banner" />
 				<p> Pokemon masters is a free-to-play gacha-type game that can be played on a mobile device, it involves obtaining characters in a multitude of ways. You can also add friends in the game so you can battle with your friends to defeat other cpu trainers. You can play single-player mode in main story to obtain some characters you meet along the way. This game was published and developed by DeNA on August 2019. So far the game has 18 chapters and 2 interludes in main story. </p><div></div>
 			<h2> Release date for Pokemon Masters </h2>
 				<p> The release date globally was on August 28, 2019 . In Canada, it was early access on August 6, 2019, but you can only install it on Google play store at that time. </p><div></div>
