--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -149,7 +149,7 @@
 						<p> Last Word: The Pokemon uses Explosion immediately before fainting. </p></li>
 						
 					<li><h3> Erika, Vileplume </h3><div></div>
-						<img src = "Erika.png" width = "250" height = "400" alt = "Erika." /><div></div>
+						<img src = "Erika.PNG" width = "250" height = "400" alt = "Erika." /><div></div>
 						Moves: 
 						<p> Energy Ball (costs 2 move gauge) is a grass type Sp. Atk move that has 58 power with 100 accuracy and it hits a single target. Very small chance of lowering the target's Sp. Def. </p>
 						<p> Stun Spore (costs 2 move gauge) leaves the target paralyzed with 90 accuracy and it hits a single target. </p>
