--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -182,7 +182,7 @@
 						<p> Hostille Environment 1: Raises the chance of inflicting status conditions with the additional effects of moves. </p></li>
 						
 					<li><h3> Bruno, Machamp </h3><div></div>
-						<img src = "bruno.png" width = "250" height = "400" alt = "Bruno." /><div></div>
+						<img src = "Bruno.png" width = "250" height = "400" alt = "Bruno." /><div></div>
 						Moves:
 						<p> Karate Chop (costs 1 move gauge) is a fighting type attack move that has 19 power with 100 accuracy and it hits a single target. This move lands critical hits more easily. </p>
 						<p> Cross Chop (costs 3 move gauge) is a fighting type attack move that has 120 power with 80 accuracy and it hits a single target. This move lands critical hits more easily. </p>
