--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -876,7 +876,12 @@
 						Moves:
 						<p> Spark (costs 2 move gauge) is an electric type attack move that has 50 power with 100 accuracy and it hits a single target. It has a moderate chance of leaving the target paralyzed. </p>
 						<p> Wild Charge (costs 3 move gauge) is an electric type attack move that has 150 power with 100 accuracy and it hits a single target. The character also takes 20% of the damage it dealt to the target. </p>
-						<p>
+						<p> X Attack (2 uses per battle) sharply raises the character's attack. </p>
+						<p> Electrifying! (2 uses per battle) restores a bit of the character's HP and ensures that the character's next attack will be a critical hit. </p>
+						<p> Shining Spotlight Wild Bolt (Sunc move) is an electric type attack move that has 300 power and it hits a single targett. </p>
+						Passive(s):
+						<p> Hit and Run 2: Occasionally raises the Pokemon's speed after it uses a move. </p>
+						<p> Lithe: Prevents the Pokemon from getting paralyzed. </p></li>
 				</ol>					
 		<p> Return to the <a href = "#Top">top</a> of the page. </p>		
 	</body>
