--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -872,7 +872,7 @@
 						<p> Antitoxin: Prevents the Pokémon from getting poisoned or badly poisoned. </p>
 						<p> First Aid 4: Restores a bit of the Pokémon’s HP once during battle when the Pokémon is in a pinch. </p></li>	
 					<li><h3> Elesa, Zebstrika </h3><div></div>
-						<img src = "Elesa.png" width = "250" height = "400" alt = "Hilda" /><div></div>
+						<img src = "Elesa.png" width = "250" height = "400" alt = "Elesa" /><div></div>
 						Moves:
 						<p> Spark (costs 2 move gauge) is an electric type attack move that has 50 power with 100 accuracy and it hits a single target. It has a moderate chance of leaving the target paralyzed. </p>
 						<p> Wild Charge (costs 3 move gauge) is an electric type attack move that has 150 power with 100 accuracy and it hits a single target. The character also takes 20% of the damage it dealt to the target. </p>
