--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -90,6 +90,7 @@
 				<li> Lyra, Chikorita, 5 stars, level 100, Support </li>
 				<li> Hilbert, Oshawott, 5 stars, level 100, Support </li>
 				<li> Hilda, Tepig, 5 stars, level 100, Strike </li>
+				<li> Elesa, Zebstrika, 5 stars, level 100, Strike </li>
 			</ol><div></div>
 			<h2 id = "Moveset"> Moveset of characters (Max stats) </h2>
 				<ol>
