--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset = "UTF-8">
 		<title>Character info</title> 
-		<link rel = "stylesheet" type= "text/css" href= "CharacterInfo.css" /> 
+		<link rel = "stylesheet" type= "text/css" href= "CharacterInfoGithub.css" /> 
 	</head>
 	<body>
 		<div id="nav">
