--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="nav">
 			<ul id="navbar">
-				<li class= "navbar1"><a class= "navbar2" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters</a></li>		
+				<li class= "navbar1"><a class= "navbar2" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters and tips</a></li>		
 				<li class= "navbar1" id= "navbar3"><a class= "navbar2" href= "Reference.html" >References</a></li>
 				<li class= "navbar1" id= "navbar4"><a class= "navbar2" href= "index.html">Home</a></li>
 				<li class= "activenav" id= "navbar2"><a class= "activenav" href= "CharacterInfoGithub.html">Character Information</a></li>
@@ -90,6 +90,7 @@
 				<li> Lyra, Chikorita, 5 stars, level 100, Support </li>
 				<li> Hilbert, Oshawott, 5 stars, level 100, Support </li>
 				<li> Hilda, Tepig, 5 stars, level 100, Strike </li>
+				<li> Elesa, Zebstrika, 5 stars, level 100, Strike </li>
 			</ol><div></div>
 			<h2 id = "Moveset"> Moveset of characters (Max stats) </h2>
 				<ol>
