--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -412,7 +412,7 @@
 						Passive(s):
 						<p> Terrify 1: Lowers the Attack of all opposing sync pairs when the Pokémon enters a battle. </p></li>
 						
-					<li><h3> Noland, Pinsir </h3>\<div></div>
+					<li><h3> Noland, Pinsir </h3><div></div>
 						<img src = "Noland.png" width = "250" height = "400" alt = "Noland" /><div></div>
 						Moves:
 						<p> Fury Cutter (costs 1 move gauge) is a bug type attack move that has 9 power with 95 accuracy and it hits a single target. Its power increases when used in succession. </p>
