--- a/HowtoplayPokemonMasters.html
+++ b/HowtoplayPokemonMasters.html
@@ -35,5 +35,7 @@
 			<h2> How can I get gems? </h2>
 				<p> One way you can get gems is by buying gems from the shop. Another way you can get gems is by logging on daily (sometimes you get gems). You can also complete Sync Pair stories to get some gems or from missions. Winning a match in a new area and difficulty (no difficulty in single player story) also gives you gems. </p> 
 		<p> Return to the <a href = "#Top">top</a> of the page. </p>	
+		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/HowtoplayPokemonMasters">
+		<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
 	</body>
 </html>
