--- a/Reference.html
+++ b/Reference.html
@@ -23,5 +23,7 @@
 						<li><p> (n.d.). Retrieved October 16, 2019, from <a href = https://youtu.be/Gms2G2cs54w.>https://youtu.be/Gms2G2cs54w.</a> Pokemon Masters Overview. </p>
 						<li><p> (n.d.). Retrieved October 16, 2019, from <a href = https://youtu.be/wPZJHGvFQnE.>https://youtu.be/wPZJHGvFQnE.</a> Sync Pairs. </p>
 				</ul>
+		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/Reference">
+		<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
 	</body>
 </html>
