--- a/Reference.html
+++ b/Reference.html
@@ -9,6 +9,7 @@
 	<body>
 		<div id="nav">
 			<ul id="navbar">
+				<li class= "navbar1"><a class= "navbar2" href= "Battling.html">Battling</a></li>
 				<li class= "navbar1"><a class= "navbar2" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters and tips</a></li>
 				<li class= "navbar1"><a class= "navbar2" href= "CharacterInfoGithub.html">Character Inforation</a></li>		
 				<li class= "activenav" id= "navbar3"><a class= "activenav" href= "Reference.html">References</a></li>
