--- a/HowtoplayPokemonMasters.html
+++ b/HowtoplayPokemonMasters.html
@@ -9,8 +9,9 @@
 	<body>
 		<div id="nav">
 			<ul id="navbar">	
+				<li class= "navbar1"><a class= "navbar2" href= "Battling.html">Battling</a></li>
 				<li class= "activenav" id= "navbar1"><a class= "activenav" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters and tips</a></li>
-				<li class= "navbar4"><a class= "navbar2" href= "CharacterInfoGithub.html">Character Information</a></li>		
+				<li class= "navbar4"><a class= "navbar2" href= "CharacterInfo.html">Character Information</a></li>				
 				<li class= "navbar1" id= "navbar3"><a class= "navbar2" href= "Reference.html" >References</a></li>
 				<li class= "navbar1" id= "navbar5"><a class= "navbar2" href= "index.html">Home</a></li>
 			</ul>
