--- a/Battling.html
+++ b/Battling.html
@@ -18,10 +18,10 @@
 		</div>
 		<h1> Battling </h1>
 			<p> There are many ways when it comes to battling NPC (Non-player character) in single player or in Co-Op where you play with other players to defeat NPC players that you are battling. </p>
-			<img src = "ICSImages/Battling.jpg" width = "416" height = "399" alt = "Battling." />
+			<img src = "Battling.jpg" width = "416" height = "399" alt = "Battling." />
 			<h2> How to battle in game </h2> 
 				<p> In game, you will see at the bottom of the screen that your move gauge is slowly increasing. Those move gauges are used to attack your opponents. When your Pokemon attacks, it will use some of the move gauge to attack. Some of the pokemon has skills that benefit the Pokemon so it can do more damage, higher defense, etc, and they don't cost any move gauge, but you can only use a certain amount in game. To activate your Sync move, you need to do a certain amount of actions in order to activate it. <div></div>
-				<img src = "ICSImages/SinglePlayer.png" width = "250" height = "400" alt = "Battling moves." />
+				<img src = "SinglePlayer.png" width = "250" height = "400" alt = "Battling moves." />
 			<h2> Single Player Mode </h2><div></div> 
 				<p> In Single player mode, you can play in Main Story, Events that are going on, go on Sync Pair Stories or train your Pokemon in the Training area. When you battle in game, you can control all 3 of your Sync pairs. <div></div>
 			<h2> Co-Op Mode </h2> 
