--- a/Battling.html
+++ b/Battling.html
@@ -10,7 +10,7 @@
 		<div id="nav">
 			<ul id="navbar">
 				<li class= "activenav" id = "navbar1"><a class= "activenav" href= "Battling.html">Battling</a></li>
-				<li class= "navbar2"><a class= "navbar4" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters</a></li>
+				<li class= "navbar2"><a class= "navbar4" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters and tips</a></li>
 				<li class= "navbar2"><a class= "navbar4" href= "CharacterInfoGithub.html">Character Inforation</a></li>		
 				<li class= "navbar1" id= "navbar3"><a class= "navbar2" href= "Reference.html" >References</a></li>
 				<li class= "navbar1" id= "navbar4"><a class= "navbar2" href= "index.html">Home</a></li>
