--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<ul id="navbar">
 				<li class= "navbar1"><a class= "navbar2" href= "Battling.html">Battling</a></li>
 				<li class= "navbar1"><a class= "navbar2" href= "HowtoplayPokemonMasters.html">How do you play Pokemon Masters and tips</a></li>
-				<li class= "navbar1"><a class= "navbar2" href= "CharacterInfoGithub.html">Character Inforation</a></li>		
+				<li class= "navbar1"><a class= "navbar2" href= "CharacterInfoGithub.html">Character Information</a></li>		
 				<li class= "navbar1" id= "navbar4"><a class= "navbar2" href= "Reference.html" >References</a></li>
 				<li class= "activenav" id= "navbar3"><a class= "activenav" href= "index.html">Home</a></li>
 			</ul>
