--- a/Battling.html
+++ b/Battling.html
@@ -16,7 +16,7 @@
 				<li class= "navbar1" id= "navbar4"><a class= "navbar2" href= "index.html">Home</a></li>
 			</ul>
 		</div>
-		<h1> Battling </h1>
+		<h1 id = "top"> Battling </h1>
 			<p> There are many ways when it comes to battling NPC (Non-player character) in single player or in Co-Op where you play with other players to defeat NPC players that you are battling. </p>
 			<img src = "Battling.jpg" width = "416" height = "399" alt = "Battling." />
 			<h2> How to battle in game </h2> 
@@ -28,7 +28,9 @@
 				<p> In Co-Op mode, you can play in Main Story, Events that are going on or unlock a new feature in Training area. When you battle in game, you can only control 1/3 characters that are fighting. The other 2 of your Pokemon sits out until you swap your Pokemon or if the Pokemon fainted. When you and other players get used a certain amount of move gauges, it forms an attack chains that can deal massive damage to your opponents. </p> 
 			<h3 id = "video"> Pokemon Battling </h3>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/2fgAkufnFqI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			
+		<p> Return to the <a href = "#Top">top</a> of the page. </p>
+		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/HowtoplayPokemonMasters">
+		<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
 	</body>
 
 </html>
