--- a/Reference.html
+++ b/Reference.html
@@ -23,6 +23,8 @@
 						<li><p> Milestones: Company: DeNA Co., Ltd. (n.d.). Retrieved from <a href = https://dena.com/intl/company/history.html#1999.>https://dena.com/intl/company/history.html#1999.</a> DeNA's history. </p></li>
 						<li><p> (n.d.). Retrieved October 16, 2019, from <a href = https://youtu.be/Gms2G2cs54w.>https://youtu.be/Gms2G2cs54w.</a> Pokemon Masters Overview. </p>
 						<li><p> (n.d.). Retrieved October 16, 2019, from <a href = https://youtu.be/wPZJHGvFQnE.>https://youtu.be/wPZJHGvFQnE.</a> Sync Pairs. </p>
+						<li><p> Pokemon Masters: Battle System & Gameplay Guide. (2019, September 23). Retrieved from <a href = https://gamewith.net/pokemonmasters/article/show/10712.>https://gamewith.net/pokemonmasters/article/show/10712.</a> Pokemon battling </p>
+						<li><p> (n.d.). Retrieved October 21, 2019, from <a href = https://youtu.be/2fgAkufnFqI.</a> Pokemon Battling </p>
 				</ul>
 		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/Reference">
 		<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
