--- a/Battling.html
+++ b/Battling.html
@@ -29,7 +29,7 @@
 			<h3 id = "video"> Pokemon Battling </h3>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/2fgAkufnFqI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<p> Return to the <a href = "#Top">top</a> of the page. </p>
-		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/HowtoplayPokemonMasters">
+		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/Battling">
 		<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
 	</body>
 
