--- a/Battling.html
+++ b/Battling.html
@@ -25,7 +25,7 @@
 			<h2> Single Player Mode </h2><div></div> 
 				<p> In Single player mode, you can play in Main Story, Events that are going on, go on Sync Pair Stories or train your Pokemon in the Training area. When you battle in game, you can control all 3 of your Sync pairs. <div></div>
 			<h2> Co-Op Mode </h2> 
-				<p> In Co-Op mode, you can play in Main Story, Events that are going on or unlock a new feature in Training area. When you battle in game, you can only control 1/3 characters that are fighting. The other 2 of your Pokemon sits out until you swap your Pokemon or if the Pokemon fainted. When you and other players get used a certain amount of move gauges, it forms an attack chains that can deal massive damage to your opponents. </p> 
+				<p> In Co-Op mode, you can play in Main Story, Events that are going on or unlock a new feature in Training area. When you battle in game, you can only control 1/3 characters that are fighting. The other 2 of your Pokemon sits out until you swap your Pokemon or if the Pokemon fainted. When you and the other players used a certain amount of move gauges, it forms an attack chains that can deal massive damage to your opponents. </p> 
 			<h3 id = "video"> Pokemon Battling </h3>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/2fgAkufnFqI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<p> Return to the <a href = "#Top">top</a> of the page. </p>
