--- a/CharacterInfoGithub.html
+++ b/CharacterInfoGithub.html
@@ -887,7 +887,7 @@
 						<p> Lithe: Prevents the Pokemon from getting paralyzed. </p></li>
 				</ol>			
 		<p> Return to the <a href = "#Top">top</a> of the page. </p>
-		<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/CharacterInfoGithub">
+		<a href="http://validator.w3.org/check?uri=https://virtu41.github.io/home/CharacterInfoGithub">
 		<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
 	</body>
 </html>
