--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<li> On August, 2019, Pokemon Masters released a game called Pokemon Masters. </li>
 				</ul>
 		<p> Return to the <a href = "#Top">top</a> of the page. </p>
-	<a href="http://validator.w3.org/check?uri=https://Oscar-Lam.github.io/home/index">
+	<a href="http://validator.w3.org/check?uri=https://virtu41.github.io/home/index">
 	<img src="w3c.png" width="165" height="64" alt="HTML5 with CSS3 and Semantics"></a>
 				
 	</body>
